--- a/index.html
+++ b/index.html
@@ -1,61 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-header{
-    background-color: tomato;
-    color: white;
-}
-h1{
-    padding-left: 10px;
-}
-nav,h1,ul,li{
-    display: inline-block;
-}
-ul{
-    margin-left: 200px;
-}
-li{
-padding: 0px 20px;
+        header {
+            background-color: tomato;
+            color: white;
+        }
 
-}
-img{
-        width: 100%;
-}
+        h1 {
+            padding-left: 10px;
+        }
 
+        nav,
+        h1,
+        ul,
+        li {
+            display: inline-block;
+        }
+
+        ul {
+            margin-left: 200px;
+        }
+
+        li {
+            padding: 0px 20px;
+
+        }
+
+        img {
+            width: 100%;
+        }
+
+        #about {
+            border: 1px solid black;
+        }
+
+        #left {
+            width: 40%;
+            border: 1px solid green;
+            display: inline-block;
+            align-items: center;
+
+        }
+        #right{
+            display: inline-block;
+            width: 50%;
+            padding: 5px;
+        }
     </style>
 </head>
+
 <body>
     <header>
-<nav>
-<h1>My Website</h1>
+        <nav>
+            <h1>My Website</h1>
 
-<ul>
-    <li>Home</li>
-    <li>About</li>
-    <li>Project</li>
-    <li>Contact US</li>
-</ul>
-</nav>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Project</li>
+                <li>Contact US</li>
+            </ul>
+        </nav>
     </header>
 
-<section id="slider">
-<img src="https://images.unsplash.com/photo-1729706046487-d757c331564b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwzNnx8fGVufDB8fHx8fA%3D%3D" alt="">
+    <section id="slider">
+        <img src="https://images.unsplash.com/photo-1729706046487-d757c331564b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwzNnx8fGVufDB8fHx8fA%3D%3D"
+            alt="">
 
-</section>    
-
-
-<section id="about">
-<aside id="left"></aside>
-<aside id="right"></aside>
+    </section>
 
 
-</section>
+    <section id="about">
+        <aside id="right">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, repudiandae voluptas porro nam ipsam
+                consectetur nemo magnam quisquam veniam ipsum quasi ullam laborum mollitia libero, aspernatur aperiam
+                nihil ipsa unde illo accusantium, deserunt quidem. Ullam voluptatum numquam quo, aspernatur perspiciatis
+                asperiores libero? Nemo expedita sint dolorum reiciendis obcaecati, hic omnis minima beatae, iusto
+                consectetur quae dolores, debitis molestias officiis optio cum? Provident vitae cumque dolores, commodi
+                amet debitis quo tempore voluptatum nesciunt accusamus excepturi recusandae modi earum magni
+                repudiandae, ea laborum repellat! Explicabo doloribus expedita doloremque id asperiores repellat natus
+                magnam nihil. Quibusdam distinctio adipisci placeat voluptatum aut doloremque. Officiis?</p>
+            </aside>
+            <aside id="left">
+                <img src="https://images.unsplash.com/photo-1729538730561-2122c58809f0?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw1MXx8fGVufDB8fHx8fA%3D%3D" alt="">
+            </aside>
+
+
+    </section>
 
 
 
 </body>
+
 </html>
